# x-reach

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  constraints.txt  implementation_plan.md  llms.txt  policy.md  pyproject.toml  x-reach-review.md  x_reach_improvement_proposals.md
.codex-plugin/: plugin.json
.github/workflows/: agent-reach-smoke.yml  pytest.yml  x-reach-smoke.yml
agent_reach/: __init__.py  _version.py  batch.py  candidates.py  cli.py  client.py  config.py  cookie_extract.py  core.py  doctor.py  extraction_hygiene.py  ledger.py  media_references.py  mission.py  operation_contracts.py  results.py  schemas.py  scout.py  source_hints.py
agent_reach/adapters/: __init__.py  base.py  twitter.py
agent_reach/channels/: __init__.py  base.py  (+1 more)
docs/: codex-integration.md  compatibility-shim.md  downstream-usage.md  field-review-improvement-plan.md  implementation-plan.md  improvement-plan.md  install.md  mission-spec.md  project-principles.md  python-sdk.md  troubleshooting.md
examples/: discord_news_collect.ps1  research-ledger.ps1
tests/: conftest.py  test_agent_reach_compat.py  test_batch.py  test_candidates.py  test_channel_contracts.py  test_channels.py  test_cli.py  test_cli_contracts.py  test_client.py  test_collect_adapters.py  test_config.py  test_cookie_extract.py  test_core.py  test_doctor.py  test_integration_artifacts.py  test_ledger.py  test_mission.py  test_repo_hygiene.py  test_results.py  test_sdk_contracts.py  test_skill_command.py  test_skill_suite.py  test_topic_fit.py  test_twitter_channel.py
x_reach/: __init__.py  _version.py  batch.py  candidates.py  cli.py  client.py  config.py  cookie_extract.py  core.py  doctor.py  evidence_scoring.py  high_signal.py  ledger.py  media_references.py  mission.py  operation_contracts.py  results.py  schemas.py  scout.py  topic_fit.py
(+112 files in other folders)
